k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: sample-k8s-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sample-k8s-api
